crates/toml/tests/snapshots/invalid/local-date/feb-29.stderr
TOML parse error at line 1, column 21
  |
1 | "not a leap year" = 2100-02-29
  |                     ^^^^^^^^^^
invalid date, expected day between 01 and 28
